# sonic-team-formats

./: CMakeLists.txt
src/: CMakeLists.txt  force-cxx20.cpp
src/stf/: basic-types.h
src/stf/anim/asm/: v2.h
src/stf/game/object-world/: v2.h  v3.h
src/stf/reflection/: operators.h  reflection.h
src/stf/reflection/util/: opaque-array.h
